# speak-write

./: .gitignore  README.md  download_model.py  requirements-dev.txt  requirements.txt  setup.cfg  speak-write.spec  speak-write.spec.template  update_spec.py
models/models--guillaumekln--faster-whisper-tiny/refs/: main
src/: gui_overlay.py  main.py  voice_recorder.py
