[metadata]
name = speak-write
version = 0.1.0
description = Your catchy description here
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/speak-write
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    =src
install_requires =
    # list your project dependencies here
    # for example: requests

[options.packages.find]
where = src

[options.extras_require]
test =
    # list your test dependencies here
    # for example: pytest

[tool:pytest]
testpaths = tests
