[metadata]
name = speak-write
version = 0.1.0
description = The simplest way to use voice-to-text on a desktop. Leveraging Open AI's Whisper model.
long_description = file: README.md
long_description_content_type = text/markdown
author = zachtsk
url = https://github.com/yourusername/speak-write
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    =src
install_requires =
    faster-whisper==0.6.0
    pyaudio==0.2.13
    pyautogui==0.9.54
    pyperclip==1.8.2
    pystray==0.19.4

[options.packages.find]
where = src
